--- a/examples/day2/tasks.json
+++ b/examples/day2/tasks.json
@@ -1,1 +1,1 @@
-[{"id":1,"date":"19-11-2023","task":"Angular Pgm"},{"id":2,"date":"20-11-2023","task":"Angular Exam"}]
+[{"id":1,"date":"19-11-2023","task":"Angular Pgm"},{"id":2,"date":"20-11-2023","task":"Angular Exam"},{"id":3,"date":"25-11-2023","task":"React course"}]
