--- a/examples/day2/package.json
+++ b/examples/day2/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "readline-sync": "^1.4.10"
+    "readline-sync": "^1.4.10",
+    "request": "^2.88.2"
   }
 }
